clusters/azure/DEV-JKS/dev/eus2/spoke-atlas/aks-atlas-market/applications/atlas-market/api/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atlas-market-api
spec:
  parentRefs:
    - name: platform
      namespace: envoy-gateway-system
      sectionName: http
  hostnames:
    - api.atlas-market.dev.example.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: atlas-market-api
          port: 80
